Added unique css formatting for fields with the disabled = true attribute.

--- a/MillerFarmsWeb/Css/main.css
+++ b/MillerFarmsWeb/Css/main.css
@@ -8,6 +8,11 @@
 	margin-bottom:20px;
 }
 
+.form-group select[disabled = "true"]{
+	color:#aaa;
+	border-color:#aaa;
+}
+
 .form-group label {
     font-size: 75%;
     margin: 0;
