--- a/MillerFarmsWeb2/Css/main.css
+++ b/MillerFarmsWeb2/Css/main.css
@@ -16,11 +16,22 @@
 .form-group label {
     font-size: 75%;
     margin: 0;
-    width: 0;
     position: relative;
-    top: -17px;
     left: 20px;
     float: left;
+    width: 0;
+    top: -15px;
+    white-space: nowrap;
+}
+
+.full-width select,
+.full-width input[type="text"]{
+    width: 45%;
+    float: left;
+}
+
+.form-group input[type="text"] {
+    padding: 13px 0 13px 10px;
 }
 
 .form-group {
@@ -60,7 +71,8 @@ form, .confirm, #Home, #ThankPage {
 	float:right;
 }
 
-.full-width{
+.full-width,
+.form-heading{
     width:100%!important;
 
 }
@@ -157,6 +169,15 @@ ul li:nth-of-type(odd){
 	.full-width .btn:last-child{
 		margin-left:0px;
 		float:none;
+	}
+	
+	.form-group label{
+		width:initial;
+		top:-3px;
+	}
+	
+	.full-width select, .full-width input[type="text"]{
+		width:90%;
 	}
 
 }
